--- a/pages/Intranet/vistas/principal/index.module.scss
+++ b/pages/Intranet/vistas/principal/index.module.scss
@@ -1,5 +1,5 @@
 .tabla {
-  font-size: 0.8rem;
+
   text-align: center;
 
   table {
@@ -9,16 +9,19 @@
     th,
     td {
       padding: 8px;
-      border: 1px solid #ccc;
+      border: 1px solid #000000;
+      background-color: rgba(59, 62, 59, 0.775);
+      color:#e6dddd;
     }
 
     th {
-      background-color: rgb(241, 190, 190);
+      background-color: rgba(35, 37, 32, 0.779);
+      color:#ffffff
     }
 
-    tbody tr:last-child td {
-      border-width: 0;
-    }
+    // tbody tr:last-child td {
+    //   border-width: 0;
+    // }
   }
 }
 
@@ -37,7 +40,26 @@
   cursor: pointer;
 }
 
+.buttonDisabled {
+  padding: 6px 12px;
+  background-color: #c86421;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.searchInput{
+  margin-left: 10px;
 
+}
+
+.modalInputs {
+  margin-top: 20px; /* Espacio de separación superior */
+  margin-bottom: 20px; /* Espacio de separación inferior */
+}
+.inputField {
+  margin-bottom: 10px; /* Espacio de separación entre los inputs */
+}
 
 
 .modal {
